--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
+
 .App {
   text-align: center;
+  background-image: url(BG.svg);
+  background-size: 100%;
+  height: 100%;
+  width: 100%;
+  position: absolute;
 }
+
+.wrapper {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 8fr 1fr;
+  grid-template-rows: 1fr 8fr 1fr
+}
+* {box-sizing: border-box;}
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 10%
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App-logo-text {
+    color: white
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-eula {
+    text-align: justify;
+    margin: auto;
+    width: 50%;
 }
